# Robotics-Projects

./: .gitignore  README.md
PID-FOC-Controller/Arduino-Library-Version/: Arduino-Library-Version.ino
PID-FOC-Controller/Tests/Arduino-stepper-motor-control/: stepper-motor-control.ino
PID-FOC-Controller/Tests/ESP32-Encoder-Test/ESP32-Encoder-Test/: ESP32-Encoder-Test.ino
Self-Balancing-Bot-Pid/: README.md
Self-Balancing-Bot-Pid/3D-Models/: chassis.FCStd
Self-Balancing-Bot-Pid/Arduino-Library-Version/: Arduino-Library-Version.ino
Self-Balancing-Bot-Pid/PCBs/Motor Driver PCB/: #auto_saved_files#  Motor Driver PCB.kicad_pcb  Motor Driver PCB.kicad_prl  Motor Driver PCB.kicad_pro  Motor Driver PCB.kicad_sch  ~Motor Driver PCB.kicad_sch.lck
Self-Balancing-Bot-Pid/PyBullet-SImulation/: balance_bot.urdf  controllers.py  filters.py  main.py  requirements.txt  simulation.py
Self-Balancing-Bot-Pid/ROS_Simulation/ros2_ws/: run_sim.sh
Self-Balancing-Bot-Pid/ROS_Simulation/ros2_ws/src/balance_bot/: CMakeLists.txt
Self-Balancing-Bot-Pid/ROS_Simulation/ros2_ws/src/balance_bot/launch/: balance_bot_gazebo_.launch.py  static_balance_bot_state_publisher.launch.py
Self-Balancing-Bot-Pid/Simulation/: Dockerfile  run_balance_bot_container.sh
Self-Balancing-Bot-Pid/Simulation/.devcontainer/: Dockerfile  devcontainer.json
Self-Balancing-Bot-Pid/Simulation/ros2_ws/src/balance_bot/: CMakeLists.txt  package.xml
Self-Balancing-Bot-Pid/Simulation/ros2_ws/src/balance_bot/gazebo/config/: controller_config.yaml
Self-Balancing-Bot-Pid/Simulation/ros2_ws/src/balance_bot/launch/: balance_bot_gazebo_.launch.py
Self-Balancing-Bot-Pid/Simulation/ros2_ws/src/balance_bot/src/: balance_controller.cpp  simple_publisher.cpp
Self-Balancing-Bot-Pid/Simulation/ros2_ws/src/balance_bot/urdf/: balance_bot.urdf.xacro
Self-Balancing-Bot-Pid/Simulation/ros2_ws/src/subscriber_publisher/: CMakeLists.txt  package.xml
Self-Balancing-Bot-Pid/Simulation/ros2_ws/src/subscriber_publisher/gazebo/config/: controller_config.yaml
Self-Balancing-Bot-Pid/Simulation/ros2_ws/src/subscriber_publisher/launch/: balance_bot_gazebo_.launch.py  static_balance_bot_state_publisher.launch.py
Self-Balancing-Bot-Pid/Simulation/ros2_ws/src/subscriber_publisher/src/: simple_subscriber.cpp
Self-Balancing-Bot-Pid/Simulation/ros2_ws/src/subscriber_publisher/urdf/: balance_bot.urdf.xacro  simple_balance_bot.urdf.xacro
Self-Balancing-Bot-Pid/Tests/: test_functions.txt
Self-Balancing-Bot-Pid/Tests/Arduino-stepper-motor-control/: Arduino-stepper-motor-control.ino
Self-Balancing-Bot-Pid/Tests/ESP32-Encoder-Motor-Test/: ESP32-Encoder-Motor-Test.ino
Self-Balancing-Bot-Pid/Tests/ESP32-Encoder-Test/ESP32-Encoder-Test/: ESP32-Encoder-Test.ino
Self-Balancing-Bot-Pid/Tests/ESP32-IMU-Encoders-Single-Output-Test/ESP32-IMU-Encoders-Single-Output-Test/: ESP32-IMU-Encoders-Single-Output-Test.ino
Self-Balancing-Bot-Pid/Tests/ESP32-IMU-Test/: ESP32-IMU-Test.ino
Self-Balancing-Bot-Pid/v1/: v1.ino
(+3 files in other folders)
